--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose-delete": "^0.5.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.24.0"
+    "sequelize": "^6.24.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   }
 }
